--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
     <title>Battleship</title>
   </head>
   <body>
-    <header>Battleship</header>
+    <header><h1>Battleship</h1></header>
     <main>
       <div id="content" class="main-content"></div>
     </main>
