--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,13 @@ header {
   background-color: var(--border-color);
 }
 
+footer {
+  padding: 16px;
+  text-align: center;
+  margin: 24px 0 0 0;
+  background-color: var(--border-color);
+}
+
 h1 {
   margin: 0;
   padding: 24px 16px;
@@ -29,13 +36,30 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
+}
+
+.top-section {
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+button {
+  outline: none;
+  border: none;
+  padding: 16px 8px;
+  background-color: var(--border-color);
+  color: #ffffff;
+  margin: 8px;
+}
+
+.boards {
   display: flex;
   justify-content: space-between;
 }
 
 .grid-outer {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
 }
 
@@ -54,6 +78,10 @@ h1 {
   margin-right: 8px;
 }
 
+.ships {
+  grid-area: 2/3/3/4;
+}
+
 .grid {
   grid-area: 2/2/3/3;
   display: grid;
@@ -67,15 +95,33 @@ h1 {
   aspect-ratio: 1/1;
 }
 
+.ship {
+  justify-self: start;
+  display: flex;
+  margin: 0 0 8px 8px;
+  border: 1px solid var(--ship-border-color);
+}
+
+.ship-box {
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--ship-border-color);
+}
+
 .grid-box {
   border: 1px solid var(--border-color);
 }
 
-.occupied {
+.occupied,
+.ship-box {
   background-color: var(--box-occupied-bg);
 }
 
 .hit {
+  background-color: var(--box-hit-bg);
+}
+
+.hit .ship-box {
   background-color: var(--box-hit-bg);
 }
 
