--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,3 +242,39 @@ input:focus,
 .miss {
   background-color: var(--box-miss-bg);
 }
+
+.rotate {
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 6px;
+  border-radius: 50%;
+  border-width: 2px;
+  border-style: solid;
+  border-top-color: #ffffff;
+  border-right-color: transparent;
+  border-bottom-color: #ffffff;
+  border-left-color: #ffffff;
+  cursor: pointer;
+  pointer-events: all;
+}
+
+.rotate:after {
+  position: absolute;
+  content: "";
+  width: 5px;
+  height: 5px;
+  right: 2px;
+  top: -5px;
+  border-width: 2px;
+  border-style: solid;
+  border-top-color: transparent;
+  border-right-color: #ffffff;
+  border-bottom-color: #ffffff;
+  border-left-color: transparent;
+}
+
+.ship[data-direction="vertical"] {
+  flex-direction: column;
+}
