Refactor ship placement functions

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,12 @@ button {
   cursor: pointer;
 }
 
+.disabled {
+  background-color: grey;
+  cursor: default;
+  pointer-events: none;
+}
+
 /* Game start*/
 
 .main-content:has(form) {
