--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
   --ship-border-color: #000035;
   --box-hit-bg: #8b000b;
   --box-miss-bg: #ffffff;
+  --box-size: 40px;
 }
 
 body {
@@ -163,13 +164,19 @@ input:focus,
 
 .boards {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.ship-placement.boards {
+  justify-content: start;
 }
 
 .grid-outer {
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(2, auto);
+  padding: 8px;
 }
 
 .column-titles {
@@ -194,8 +201,8 @@ input:focus,
 .grid {
   grid-area: 2/2/3/3;
   display: grid;
-  grid-template-columns: repeat(10, 40px);
-  grid-template-rows: repeat(10, 40px);
+  grid-template-columns: repeat(10, var(--box-size));
+  grid-template-rows: repeat(10, var(--box-size));
   border: 1px solid var(--border-color);
 }
 
@@ -211,14 +218,14 @@ input:focus,
 }
 
 .ship-box {
-  width: 20px;
-  height: 20px;
+  width: calc(var(--box-size) / 2);
+  height: calc(var(--box-size) / 2);
   border: 1px solid var(--ship-border-color);
 }
 
 .ship-placement .ship-box {
-  width: calc(40px - 2px);
-  height: calc(40px - 2px);
+  width: calc(var(--box-size) - 2px);
+  height: calc(var(--box-size) - 2px);
 }
 
 .grid-box {
@@ -252,8 +259,8 @@ input:focus,
 .rotate {
   position: relative;
   display: block;
-  width: 20px;
-  height: 20px;
+  width: calc(var(--box-size) / 2);
+  height: calc(var(--box-size) / 2);
   margin: 6px;
   border-radius: 50%;
   border-width: 2px;
@@ -283,4 +290,28 @@ input:focus,
 
 .ship[data-direction="vertical"] {
   flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .grid-outer {
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .column-titles {
+    grid-area: 1/2/2/3;
+  }
+
+  .row-titles {
+    grid-area: 2/1/3/2;
+  }
+
+  .ships {
+    grid-area: 3/2/4/3;
+    padding-top: 16px;
+  }
+
+  .ship {
+    margin: 0 0 8px 0;
+  }
 }
